<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        style="@style/Material.Design.Subheading"
        android:textColor="@color/colorAccent"
        android:text="@string/input_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/editTextInput"
        style="@style/Material.Design.Display1"
        android:textColor="@color/colorBlack87"
        android:layout_marginTop="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:drawablePadding="0dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890_"
        android:hint="@string/input_hint"

        android:lines="1"
        android:singleLine="true"
        android:text="" />

    <TextView
        style="@style/Material.Design.Body1"
        android:textColor="@color/colorBlack50"
        android:layout_marginTop="0dp"
        android:text="@string/input_sub_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</merge>